# experimentation

./: README.md
data_proc/: main.py  pyproject.toml
data_proc/bar_creation/: main.py
graphing/: package-lock.json  package.json
manipulation/: pyproject.toml
