[tool.poetry]
name = "experimentation"
version = "0.1.0"
description = ""
authors = ["NathanDBrowne <nathan.browne1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fin-tools = {git = "https://github.com/FinityWorks/fin-tools.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
